# hilbert

./: Cargo.toml  README.md  clippy.toml  dprint.json  justfile  rustfmt.toml  typos.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
