[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
core = { path = "../core" }
